--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,6 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
-    testCompileOnly group: 'junit', name: 'junit', version: '4.12'
+//    testCompileOnly group: 'junit', name: 'junit', version: '4.12'
+    testCompileOnly group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
 }
