--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
 //    testCompileOnly group: 'junit', name: 'junit', version: '4.12'
     testCompileOnly group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
 }
